--- a/css/responsive.css
+++ b/css/responsive.css
@@ -14,6 +14,13 @@
 	.logo{
 		font-size: 17px
 	}
+	.text-hover{
+		position: absolute;
+		left: 36%;
+		bottom:35%;
+		/* padding: 15px 20px; */
+		z-index: 99;
+	}
 	
 
 }
@@ -84,6 +91,14 @@
 	.ser-icon i{
 		font-size: 38px;
 	}
+
+	.text-hover{
+		position: absolute;
+		left: 32%;
+		bottom:32%;
+		/* padding: 15px 20px; */
+		z-index: 99;
+	}
 }
 @media (min-width: 600px) and (max-width: 767px) {
 	#mainNav {
@@ -148,6 +163,13 @@
 	}
 	.snip1401 figcaption{
 		padding: 30px 0 30px 60px;
+	}
+	.text-hover{
+		position: absolute;
+		left: 33%;
+		bottom:32%;
+		/* padding: 15px 20px; */
+		z-index: 99;
 	}
 }
 @media only screen and (min-width: 280px) and (max-width: 599px) {
